fixed scrollbar

--- a/asset/font.css
+++ b/asset/font.css
@@ -25,7 +25,7 @@
 }
 .form p {
   font-weight: 500;
-  max-width: 50ch;
+  max-width: 20ch;
 }
 .logo {
   font-family: 'Dancing Script', cursive;
